tests/snapshots/files__simple_recursive-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@inc(v0: int): int {
  c1_: int = const 2;
  v2_: bool = lt v0 c1_;
  v3_: int = id v0;
  br v2_ .b4_ .b5_;
.b4_:
  c6_: int = const 1;
  v7_: int = add c6_ v0;
  c8_: int = const 2;
  v9_: bool = lt v7_ c8_;
  print v7_;
  v10_: int = id v7_;
  br v9_ .b11_ .b12_;
.b11_:
  c13_: int = const 1;
  v14_: int = add c13_ v7_;
  c15_: int = const 2;
  v16_: bool = lt v14_ c15_;
  print v14_;
  v17_: int = id v14_;
  br v16_ .b18_ .b19_;
.b18_:
  c20_: int = const 1;
  v21_: int = add c20_ v14_;
  print v21_;
  v22_: int = call @inc v21_;
  v17_: int = id v22_;
  v10_: int = id v17_;
  v3_: int = id v10_;
  ret v3_;
  jmp .b23_;
.b19_:
  v10_: int = id v17_;
  v3_: int = id v10_;
  ret v3_;
  jmp .b23_;
.b12_:
  v3_: int = id v10_;
  ret v3_;
  jmp .b23_;
.b5_:
  ret v3_;
.b23_:
}
@main {
  c0_: bool = const true;
  c1_: int = const 0;
  v2_: int = id c1_;
  c3_: int = const 2;
  c4_: int = const 1;
  print c4_;
  print c3_;
  v5_: int = call @inc c3_;
  v2_: int = id v5_;
  print v2_;
  ret;
  ret;
}
