tests/snapshots/files__sqrt_small-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 16.0
@main(v0: float) {
  c1_: float = const 0;
  v2_: bool = feq v0 c1_;
  br v2_ .b3_ .b4_;
.b3_:
  print c1_;
  ret;
  jmp .b5_;
.b4_:
  v6_: bool = feq v0 v0;
  c7_: bool = const false;
  v8_: float = id c1_;
  v9_: bool = id c7_;
  br v6_ .b10_ .b11_;
.b10_:
  v12_: bool = flt v0 c1_;
  c13_: bool = const false;
  v14_: float = id c1_;
  v15_: bool = id c13_;
  br v12_ .b16_ .b17_;
.b16_:
  v8_: float = id v14_;
  v9_: bool = id v15_;
  v18_: float = fdiv v8_ v8_;
  print v18_;
  ret;
  jmp .b5_;
.b17_:
  c19_: float = const 1;
  c20_: float = const 1.0000000001;
  c21_: float = const 0.9999999999;
  c22_: float = const 2;
  v23_: float = id c1_;
  v24_: float = id c19_;
  v25_: float = id c20_;
  v26_: float = id c21_;
  v27_: float = id c22_;
  v28_: float = id v0;
.b29_:
  v30_: float = fdiv v28_ v24_;
  v31_: float = fadd v24_ v30_;
  v32_: float = fdiv v31_ v27_;
  v33_: float = fdiv v32_ v24_;
  v34_: bool = fge v33_ v26_;
  v35_: bool = fle v33_ v25_;
  v36_: bool = and v34_ v35_;
  v37_: bool = not v36_;
  v38_: float = id v23_;
  v24_: float = id v32_;
  v39_: float = id v25_;
  v40_: float = id v26_;
  v41_: float = id v27_;
  v42_: float = id v28_;
  v23_: float = id v38_;
  v25_: float = id v39_;
  v26_: float = id v40_;
  v27_: float = id v41_;
  v28_: float = id v42_;
  br v37_ .b29_ .b43_;
.b43_:
  print v24_;
  c44_: bool = const true;
  v14_: float = id v23_;
  v15_: bool = id c44_;
  v8_: float = id v14_;
  v9_: bool = id v15_;
  ret;
  jmp .b5_;
.b11_:
  v18_: float = fdiv v8_ v8_;
  print v18_;
  ret;
.b5_:
}
