tests/snapshots/files__strong_loop-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 3
@main(v0: int) {
  c1_: int = const 3;
  v2_: int = add c1_ v0;
  c3_: int = const 0;
  v4_: int = id c1_;
  v5_: int = id v2_;
  v6_: int = id c3_;
  v7_: int = id v0;
.b8_:
  c9_: int = const 7;
  v10_: int = mul c9_ v4_;
  print v10_;
  c11_: int = const 1;
  v12_: int = add c11_ v4_;
  v13_: int = add v10_ v6_;
  v14_: bool = lt v4_ v7_;
  v4_: int = id v12_;
  v5_: int = id v5_;
  v6_: int = id v13_;
  v7_: int = id v7_;
  br v14_ .b8_ .b15_;
.b15_:
  print v6_;
  print v2_;
  print v4_;
  ret;
}
