tests/snapshots/files__strong_loop-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
@main(v0: int) {
.b1_:
  c2_: int = const 3;
  v3_: int = add c2_ v0;
  c4_: int = const 0;
  c5_: int = const 21;
  v6_: int = id c2_;
  v7_: int = id v3_;
  v8_: int = id c4_;
  v9_: int = id v0;
  v10_: int = id c5_;
.b11_:
  print v10_;
  c12_: int = const 1;
  v13_: int = add c12_ v6_;
  v14_: int = add v10_ v8_;
  c15_: int = const 7;
  v16_: int = add c15_ v10_;
  v17_: bool = lt v6_ v9_;
  v6_: int = id v13_;
  v7_: int = id v7_;
  v8_: int = id v14_;
  v9_: int = id v9_;
  v10_: int = id v16_;
  br v17_ .b11_ .b18_;
.b18_:
  print v8_;
  print v3_;
  print v6_;
  ret;
}
